# recollect

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
apps/extension/: manifest.json  package.json
apps/extension/icons/: .gitkeep
apps/extension/src/background/: service-worker.ts
apps/extension/src/popup/: Popup.tsx  index.html  styles.css
apps/web/: .dockerignore  Dockerfile  package.json  tailwind.config.js
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/auth/callback/: route.ts
apps/web/app/dashboard/: page.tsx
apps/web/app/login/: page.tsx
apps/web/components/auth/: sign-out-button.tsx
apps/web/components/bookmarks/: add-bookmark-form.tsx  bookmark-section.tsx  delete-bookmark-button.tsx  search-bar.tsx
apps/web/components/dashboard/: dashboard-layout.tsx  header.tsx  index.ts  quick-stats.tsx  sidebar.tsx
apps/web/contexts/: theme-context.tsx
apps/web/lib/supabase/: server.ts
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: bookmarks.py  search.py
backend/app/core/: config.py  deps.py
backend/app/models/: bookmark.py
backend/app/services/: embedding.py  llm_ai.py  scraper.py  search.py
backend/tests/: conftest.py  test_bookmarks.py  test_llm_ai.py  test_scraper.py  test_search.py
supabase/: config.toml
supabase/migrations/: 20260101_schema_init.sql  20260113005248_add_table.sql  20260125_categories_update.sql  20260131_hybrid_search.sql
